@@ -1,6 +1,7 @@
 Revision history for File-Map
 
 {{$NEXT}}
+          Upgrade dependency to Test::Warnings 0.005
 
 0.59      2013-08-09 11:04:45 Europe/Amsterdam
           Explicitly depend on Test::Warnings 0.004
